--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,8 +7,24 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+<!--<div class="container">-->
+<div class="container-fluid">
+  <div class="row-fluid">
+    <div class="span12" style="background-color: navajowhite">
+      <%= link_to 'Banner', root_path, class: 'span3' %>
+      <br><br>
+    </div>
+  </div>
+  <div class="row-fluid">
 
-<%= yield %>
-
+    <div class="span2" style="background-color: burlywood">
+      Sidebar content
+    </div>
+    <div class="span10" style="background-color: lavenderblush">
+      <%= yield %>
+    </div>
+  </div>
+<!--</div>-->
+</div>
 </body>
 </html>
