--- a/app/views/contents/index.html.erb
+++ b/app/views/contents/index.html.erb
@@ -1,8 +1,15 @@
-<%= link_to 'New Article', new_content_path, class: 'btn btn-primary' %>
-<br>
-<% @contents.each do |c| %>
-    <%= link_to c.title, content_path(c) %>
-    <br/>
-    <%= c.content %>
-    <br>
-<% end %>
+<div class="span10" style="background-color: #ffffff">
+  <% @contents.each do |c| %>
+   <div>
+      <%= link_to c.title, content_path(c) %>
+      <%= "#{time_ago_in_words(c.created_at)} ago " %>
+      <br/>
+      <%= truncate(c.content, length: 300) %>
+      <br>
+      <br>
+  <% end %>
+  </div>
+</div>
+<div class="span2" style="background-color: darkseagreen">
+  <%= link_to 'New Article', new_content_path, class: 'btn btn-inverse span', style: 'float: right;' %>
+</div>
