--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@content, class: 'form-horizontal' ) do |f| %>
+<%= form_for(@article, class: 'form-horizontal' ) do |f| %>
 
     <div class="form-horizontal">
       <div class="control-group">
@@ -18,7 +18,8 @@
           <%= f.text_area :content, :rows => 6 %>
         </div>
       </div>
-      <%= f.text_field :tags_list, :input_html => {:placeholder => 'Tags', :value => f.object.tags_list} %>
+      <%#= f.text_field :tags_list, :input_html => {:placeholder => 'Tags', :value => f.object.tags_list} %>
+      <%= f.text_field :tags_list %>
       <!--<div class="checkbox inline">-->
       <%# Category.all.each do |cat| %>
       <ul><%#= check_box_tag('categories[]', cat.id) %>
