--- a/app/assets/stylesheets/articles.css.scss
+++ b/app/assets/stylesheets/articles.css.scss
@@ -1,3 +1,12 @@
 // Place all the styles related to the Articles controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.article_tag{
+  color: #868686;
+}
+
+.article_tag:hover{
+  text-decoration: none;
+  color: #636363;
+}
