--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -11,3 +11,17 @@
  *= require_self
  *= require_tree .
  */
+
+
+#ziksita_header{
+  margin-top: 2%;
+  background-color: navajowhite;
+}
+
+#wrap {
+  min-height: 100%;
+  height: auto !important;
+  height: 100%;
+  margin: 0 auto -85px;
+  width: 100%;
+}
