--- a/app/assets/stylesheets/articles.css.scss
+++ b/app/assets/stylesheets/articles.css.scss
@@ -1,5 +1,5 @@
 // Place all the styles related to the Articles controller here.
-// They will automatically be included in application.css.
+// They will automatically be included in application.css.scss.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 .article_tag{
@@ -9,4 +9,18 @@
 .article_tag:hover{
   text-decoration: none;
   color: #636363;
+}
+
+.article_index{
+  margin-left: 10px;
+  margin-top: 65px;
+}
+
+.article_index_title{
+  font-size: 20px;
+  margin-right: 50px;
+}
+
+.article_index_title:hover{
+  text-decoration: none;
 }
