--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
 <body>
 <div id="wrap">
   <div class="header" style="background-color: powderblue; position: fixed; width: 100%">
-    <%= "render :partial => 'layouts/header'" %>
+    <%= render :partial => 'layouts/header' %>
   </div>
   <div class="container-fluid">
     <div class="row-fluid">
